syntax = "proto3";
package cln;

// This file was automatically derived from the JSON-RPC schemas in
// `doc/schemas`. Do not edit this file manually as it would get
// overwritten.

import "node.proto";
import "primitives.proto";

service Hodl {
	rpc DecodeBolt11(DecodeBolt11Request) returns (DecodeBolt11Response) {}
	rpc HodlInvoice(InvoiceRequest) returns (InvoiceResponse) {}
	rpc HodlInvoiceSettle(HodlInvoiceSettleRequest) returns (HodlInvoiceSettleResponse) {}
	rpc HodlInvoiceCancel(HodlInvoiceCancelRequest) returns (HodlInvoiceCancelResponse) {}
	rpc HodlInvoiceLookup(HodlInvoiceLookupRequest) returns (HodlInvoiceLookupResponse) {}
}

message DecodeBolt11Request{
	string bolt11 = 1;
	optional string description = 2;
}

message DecodeBolt11Response{
	optional string description = 1;
	optional bytes description_hash = 2;
	bytes payment_hash = 3;
	uint64 expiry = 5;
	optional Amount amount_msat = 6;
	RoutehintList route_hints = 4;
	uint32 timestamp = 7;
}

message HodlInvoiceSettleRequest {
	bytes payment_hash = 1;
}

message HodlInvoiceSettleResponse {
	enum Hodlstate {
		OPEN = 0;
		SETTLED = 1;
		CANCELED = 2;
		ACCEPTED = 3;
	}
	Hodlstate state = 1;
}

message HodlInvoiceCancelRequest {
	bytes payment_hash = 1;
}

message HodlInvoiceCancelResponse {
	enum Hodlstate {
		OPEN = 0;
		SETTLED = 1;
		CANCELED = 2;
		ACCEPTED = 3;
	}
	Hodlstate state = 1;
}

message HodlInvoiceLookupRequest {
	bytes payment_hash = 1;
}

message HodlInvoiceLookupResponse {
	enum Hodlstate {
		OPEN = 0;
		SETTLED = 1;
		CANCELED = 2;
		ACCEPTED = 3;
	}
	Hodlstate state = 1;
	optional uint32 htlc_expiry = 2;
}
